--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles.css">
+    <meta property="og:title" content=Contrátame>
+    <meta property="og:site_name" content=Proyecto contrátame>
+    <meta property="og:url" content=https://github.com/owlrossell/hire-me-project>
+    <meta property="og:description" content="">
+    <meta property="og:type" content=website>
     <title>Contrátame</title>
 </head>
 <body>
