--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <meta property="og:title" content=Contrátame>
     <meta property="og:site_name" content=Proyecto contrátame>
-    <meta property="og:url" content=https://github.com/owlrossell/hire-me-project>
+    <meta property="og:url" content=https://owlrossell.github.io/hire-me-project/>
     <meta property="og:description" content="">
     <meta property="og:type" content=website>
     <title>Contrátame</title>
