dark mode OpenGraph

--- a/dark-mode/dark-mode.html
+++ b/dark-mode/dark-mode.html
@@ -8,7 +8,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
           integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    }<meta property="og:title" content="">
+    <meta property="og:site_name" content="">
+    <meta property="og:url" content="">
+    <meta property="og:description" content="">
+    <meta property="og:type" content="">
+    <meta property="og:image" content=https://i.postimg.cc/L8npXWHS/owlrossell-github-io-hire-me-project-dark-mode-dark-mode-html.png>
     <link rel="stylesheet" href="dark-mode.css">
+
     <title>Dark mode</title>
 </head>
 <body>
