--- a/dark-mode/dark-mode.html
+++ b/dark-mode/dark-mode.html
@@ -8,12 +8,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
           integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
-    <meta property="og:title" content="Dark mode">
-    <meta property="og:site_name" content="Dark mode">
+    <meta name="description" content="Probando JS para cambiar el theme en un website">
+
     <meta property="og:url" content="https://owlrossell.github.io/hire-me-project/dark-mode/dark-mode.html">
-    <meta property="og:description" content="Probando JS para cambiar el theme en un website">
     <meta property="og:type" content="website">
+    <meta property="og:title" content="Dark mode">
+    <meta property="og:description" content="Probando JS para cambiar el theme en un website">
     <meta property="og:image" content="https://i.postimg.cc/L8npXWHS/owlrossell-github-io-hire-me-project-dark-mode-dark-mode-html.png">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="owlrossell.github.io">
+    <meta property="twitter:url" content="https://owlrossell.github.io/hire-me-project/dark-mode/dark-mode.html">
+    <meta name="twitter:title" content="Dark mode">
+    <meta name="twitter:description" content="Probando JS para cambiar el theme en un website">
+    <meta name="twitter:image" content="https://i.postimg.cc/L8npXWHS/owlrossell-github-io-hire-me-project-dark-mode-dark-mode-html.png">
     <link rel="stylesheet" href="dark-mode.css">
 
     <title>Dark mode</title>
